--- a/springapi/src/main/resources/application.properties
+++ b/springapi/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/projeto
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:33065/projeto
+spring.datasource.username=treina
+spring.datasource.password=treina
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
