--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,24 +1,16 @@
-# Logs
-logs
-*.log
+# Dependências do Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Construção do projeto
+dist/
+build/
+.cache/
+.vscode/
+*.env
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Arquivos do sistema
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
