--- a/springapi/.gitignore
+++ b/springapi/.gitignore
@@ -1,33 +1,29 @@
-HELP.md
+# Compilação
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+*.jar
+*.war
+*.ear
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Configuração do Maven
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
 
-### IntelliJ IDEA ###
-.idea
-*.iws
+# Arquivos de IDEs
 *.iml
-*.ipr
+.idea/
+*.swp
+*.swo
+*.bak
+*.tmp
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# Configuração do sistema
+.DS_Store
+Thumbs.db
 
-### VS Code ###
-.vscode/
+# Logs e arquivos temporários
+*.log
+*.out
+hs_err_pid*
